base/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  labels:
    app: unifi-controller
spec:
  selector:
    app: unifi-controller
  ports:
    - name: https
      port: 8443
      targetPort: 8443
    - name: inform
      port: 8080
      targetPort: 8080
    - name: stun
      port: 3478
      protocol: UDP
      targetPort: 3478
